syntax = "proto3";

package gameplay_service;

message BuyToolRequest {          
    string userId = 1;    
    string toolId = 2;
}
